--- a/admin/admin.css
+++ b/admin/admin.css
@@ -6,7 +6,7 @@ input {
     width: 45%;
     height: 50%;
     float: left;
-    border: 2px solid black;
+    border: 1px solid black;
     overflow-y: scroll;
 }
 
@@ -14,6 +14,17 @@ input {
     width: 50%;
     height: 50%;
     margin-left: calc(45% + 10px);
-    border: 2px solid black;
+    border: 1px solid black;
     overflow-y: scroll;
+}
+
+#info {
+    position: absolute;
+    width: 50%;
+    margin-left: calc(45%);
+    border: 1px solid black;
+}
+
+#info th, #info td {
+    border: 1px solid black;
 }
